src/components/Portfolio.css
h1 {
  padding: 0;
  margin: 0;
  font-size: 2rem;
}

a {
  color: unset;
  text-decoration: none;
}

p {
  margin-bottom: 0;
}


.content {
  margin-top: 45px;
}

.wrapper {
  margin: 0px auto;
  max-width: 850px;

}

.hero-text p {
  margin: 0;
}

.logo-wrapper {
  display: flex;
  position: relative;
  right: 1px;
}

p {
  line-height: 1.5;
}

.hero-section {
  height: 90vh;
  padding: 20px;
}

section {
  height: auto;
  margin: 20px 0;
  padding: 70px 20px;
  box-shadow: 0 4px 2px -2px rgb(148, 163, 184, .1);
}

.header-container {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
    padding: 0px 20px;
  z-index: 99;
  background: #1d1d20;
  transition: position 0.3s ease-in-out;
  padding-top: 30px;
}

@media (min-width: 768px) {
  .header-container {
    flex-direction: row;
  }

}

.scrolled {
  position: sticky;
  top: 0;
  animation: slideDown 0.3s ease-in-out;
}

@keyframes slideDown {
  from {
    opacity: 0;
    transform: translateY(-100%);
  }

  to {
    opacity: 1;
    transform: translateY(0);
  }
}

.menu {
  display: none;
  font-optical-sizing: auto;
  font-size: 17px;
  flex-direction: column;
}

.menu ul li {
  margin-right: 40px;
  position: relative;
  cursor: pointer;
  transition: color 0.5s ease, text-decoration 0.5s ease;
}

.menu span:hover {
  transition: width 0.3s ease;
}

.menu ul li:last-child {
  margin-right: 0;
}

.social-media-icons {
  margin-top: 70px;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  color: var(--main-color);
  opacity: .5;
  gap: 20px;
  margin-right: 10px;
}

.skill-icons {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
}

.hero-text {
  margin: auto;
  margin-top: 70px;
  font-size: 16.5px;
}

.hero-text p {
  padding: 0px;
  width: 100%;
  color: rgb(209, 209, 209);

}

.menu, h2, h3 {
  color: rgb(209, 209, 209);

}

.intro,
.sub-intro {
  background: none;
}

.sub-intro-wrapper {
  display: flex;
  justify-content: flex-end;
  margin-top: 50px;
}

.accent-m-b {
  color: rgb(66, 166, 102);
}

ul, li {
  list-style: none;
  padding: 0;
  margin: 0;
}

.menu ul {
  display: block;
}



.menu-gradient {
  width: 40px;
  height: 3px;
  background-image: linear-gradient(to left, #786ab0 0, #42a666);
  margin-bottom: 10px;
  border-radius: 30px;
}

.menu-gradient.short {
  width: 25px;
  position: relative;
  right: -14px;
}


.menu-gradient:last-child {
  margin-bottom: 0;
}


/* 
@media screen and (max-width: 605px) {
  .hero-text p {
    width: 70%;
  }

  .intro {
    background-size: 90% 11px, 11px 94%;
  }

  .sub-intro {
    background-size: 90% 11px, 11px 94%;
  }

} */

.name {
  font-size: 1.3rem;
  font-weight: 600;
}

.menu span {
  display: inline-block;
  position: relative;
  padding-bottom: 2px;
}

.menu ul li:after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 1px;
  background-image: linear-gradient(to right, rgb(120, 106, 176) 0%, rgb(66, 166, 102) 100%);
  background-size: 100% 100%;
  background-repeat: no-repeat;
  transition: width .2s ease-in-out;
}

div.left-gradient {
  position: relative;
  padding-left: 20px;
}

.left-gradient:after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  width: 2px;
  height: 100%;
  background-image: linear-gradient(to top, rgb(120, 106, 176) 0%, rgb(66, 166, 102) 100%);
  background-size: 100% 100%;
  background-repeat: no-repeat;
  transition: width .2s ease-in-out;
}

.container:after {
  content: '';
}

.skill-time-wrapper {
  position: relative;
}

.skill-time-wrapper:after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  width: 5%;
  height: 2px;
  background-image: linear-gradient(to right, rgb(120, 106, 176) 0%, rgb(66, 166, 102) 100%);
  background-size: 100% 100%;
  background-repeat: no-repeat;
  transition: width .2s ease-in-out;
}



.menu span:hover:after {
  background-image: linear-gradient(to right, rgb(66, 166, 102) 0%, rgb(120, 106, 176) 100%);
  width: 100%;
  animation: show 0.4s ease-in-out;

}

@keyframes show {
  0% {
    width: 0;
  }

  100% {
    width: 100%;
  }
}

.primary-skills,
.secondary-skills {
  margin: auto;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  padding: 30px 10px;
}

.primary-skills {
  font-size: 14px;
  margin-bottom: 40px;
  background-size: 0% 5px, 5px 100%;
  border-top-left-radius: 0;
  border-top-right-radius: 0;

}

.secondary-skills {
  background-size: 0% 5px, 5px 100%;
  border-top-left-radius: 0;
}

.title-h1 {
  position: relative;
  width: max-content;
}

.welcome {
  font-weight: 300;
  font-size: 30px;

}

.icons-skills {
  display: flex;
  align-self: center;
  flex-wrap: wrap;
}

/* box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); */

.section {
  height: auto;
}

.logo-a span {
  font-size: 24px;
}

.logo-a span:nth-child(1) {
  transform: scale(1.2);
  display: inline-block;

}



.title-wrapper {
  margin-bottom: 40px;
}

.logo::before,
.logo::after {
  content: '';
  position: absolute;
  width: 50%;
  height: 50%;
  background: linear-gradient(to left, #4158D0 0%, #C850C0 46%, #FFCC70 100%), linear-gradient(to top, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
  background-size: 100% 11px, 11px 100%;
  background-position: left top, right bottom;
  background-repeat: no-repeat;
  border-radius: 50%;
  z-index: -1;
}

.logo-text-a {
  border-style: solid;
  border-color: transparent;
  background: linear-gradient(to right, rgb(120, 106, 176) 0%, rgb(66, 166, 102) 100%), linear-gradient(to bottom, rgb(120, 106, 176) 0%, rgb(66, 166, 102) 100%);
  background-size: 88% 3px, 3px 75%;
  background-position: left top, left top;
  background-repeat: no-repeat;
  border-top-left-radius: 14px;
  padding-left: 6px;
  padding-top: 5px;
  font-size: 32px;
}

.container {
  width: 380px;
  height: auto;
  position: relative;
  margin-top: 25px;
}

@media screen and (max-width: 500px) {
  .container {
    width: 90%;
  }

}
/* ... */

